--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,7 @@
 
                         <a href="#">Antarctic</a>
 
-                        <svg class="svgdes" stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+                        <svg class="svgdes" onclick="deyis()" stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
                             stroke-linecap="round" stroke-linejoin="round" class="svg2"
                             xmlns="http://www.w3.org/2000/svg">
                             <circle cx="12" cy="12" r="4"></circle>
