--- a/index.htm
+++ b/index.htm
@@ -129,7 +129,7 @@
         <div class="frstcountry"></div>
         <div  id="olkem" class="olkeler"></div>
         <div class="show-buton">
-            <button onclick="reset()">Show</button>
+            <button id="btn" onclick="reset()">Show</button>
         </div>
     </main>
     <footer>
